# mini-code-agent

./: .env.template  .gitignore  LICENSE  README.md  mini_agent.fc  mini_agent.pp  mini_agent.te  pyproject.toml  start_mini_agent.sh
gateway/: README.md  bootstrap.sh
micode311/: pyvenv.cfg
monitor/: README.md  langgraph_monitor.py  run_agent_with_monitor.py
policies/: policy.yaml
sandbox-mcp/: README.md  server.py
src/code_agent/: __init__.py  agent.py  main.py  tools.py
testHere/: hello_jjq.py
testHere/normal_area/: normal.txt
testHere/protected_area/: protected.txt
tmp/: mini_agent.tmp
